Modify styles and update input placeholders
Updated button width and background color. Changed placeholder text for email and password inputs.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             border:none;
         }
         button {
-            width:85%;
+            width:55%;
             padding:12px;
-            background:#238636;
+            background:#white;
             border:none;
             color:white;
             font-size:18px;
@@ -37,10 +37,10 @@
 
 <body>
 
-<h2>🔐 RGB Display Login</h2>
+<h2> RGB Display Login</h2>
 
-<input type="email" id="email" placeholder="Email"><br>
-<input type="password" id="password" placeholder="Password"><br>
+<input type="email" id="email" placeholder="shoaibimran001@gmail.com"><br>
+<input type="password" id="password" placeholder="Shoaibind@123"><br>
 
 <button onclick="login()">Login</button>
 
