--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <div class="box">
   <h2>RGB Display Login</h2>
 
-  <input id="email" type="email" placeholder="shoaibimran001@gmail.com">
-  <input id="password" type="password" placeholder="Shoaib@a">
+  <input id="email" type="email" placeholder="Email">
+  <input id="password" type="password" placeholder="password">
   <button onclick="login()">Login</button>
 
   <p id="msg"></p>
