--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
 
 
 
-
-
-  
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
   const firebaseConfig = {
@@ -84,12 +82,16 @@
   };
 
   firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
 
-  // Protect dashboard
+  const auth = firebase.auth();
+  const db = firebase.database();
+
+  // 🔒 Protect dashboard
   auth.onAuthStateChanged(user => {
     if(!user){
       window.location.href = "login.html";
     }
   });
 </script>
+
+  
